[project]
name = "comfyui_streamingt2v"
description = "ComfyUI_StreamingT2V"
version = "1.0.0"
license = "LICENSE"
dependencies = ["IPython", "accelerate", "bitsandbytes", "transformers", "albumentations", "av", "boto3", "decord", "einops", "gdown", "huggingface-hub", "omegaconf", "pandas", "pytorch-lightning", "scikit-image", "scikit-learn", "scipy", "seaborn", "tqdm", "xformers", "open-clip-torch", "jsonargparse[signatures]>=4.26.1", "fairscale", "rotary-embedding-torch", "easydict", "torchsde", "imageio[ffmpeg]", "addict", "yapf", "gast", "simplejson", "sortedcontainers", "oss2", "datasets", "diffusers", "raft", "ffmpeg", "rich", "clip @ git+https://github.com/openai/CLIP.git@a1d071733d7111c9c014f024669f959182114e33", "pibble"]

[project.urls]
Repository = "https://github.com/chaojie/ComfyUI_StreamingT2V"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_StreamingT2V"
Icon = ""
